--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Webpack basic project</title>
+    <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
     <div id="root">
